--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR" data-bs-theme="auto">
   <head>
-    <script src="../assets/js/color-modes.js"></script>
+    <script src="./assets/js/color-modes.js"></script>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -23,7 +23,7 @@
       href="https://cdn.jsdelivr.net/npm/@docsearch/css@3"
     />
 
-    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="./assets/dist/css/bootstrap.min.css" rel="stylesheet" />
 
     <style>
       .bd-placeholder-img {
@@ -108,7 +108,9 @@
     <!-- Custom styles for this template -->
     <link href="carousel.css" rel="stylesheet" />
   </head>
+
   <body>
+    <!-- Theme symbols -->
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
       <symbol id="check2" viewBox="0 0 16 16">
         <path
@@ -133,6 +135,7 @@
       </symbol>
     </svg>
 
+    <!-- Theme selector at bottom right -->
     <div
       class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle"
     >
@@ -204,6 +207,7 @@
       </ul>
     </div>
 
+    <!-- Header -->
     <header data-bs-theme="dark">
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
@@ -248,6 +252,7 @@
     </header>
 
     <main>
+      <!-- Carousel -->
       <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button
@@ -378,10 +383,7 @@
         </button>
       </div>
 
-      <!-- Marketing messaging and featurettes
-  ================================================== -->
-      <!-- Wrap the rest of the page in another container to center all the content. -->
-
+      <!-- Marketing messaging and featurettes; Wrap the rest of the page in another container to center all the content. -->
       <div class="container marketing">
         <!-- Three columns of text below the carousel -->
         <div class="row">
@@ -580,9 +582,8 @@
 
         <!-- /END THE FEATURETTES -->
       </div>
-      <!-- /.container -->
 
-      <!-- FOOTER -->
+      <!-- Footer -->
       <footer class="container">
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>
@@ -591,6 +592,6 @@
         </p>
       </footer>
     </main>
-    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
