--- a/index.html
+++ b/index.html
@@ -398,27 +398,20 @@
         <!-- Three columns of text below the carousel -->
         <div class="row">
           <div class="col-lg-4">
-            <svg
-              class="bd-placeholder-img rounded-circle"
-              width="140"
-              height="140"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect
-                width="100%"
-                height="100%"
-                fill="var(--bs-secondary-color)"
-              />
-            </svg>
-            <h2 class="fw-normal">Heading</h2>
+            <img
+              src="assets/pictures/gloome.png"
+              style="
+                width: 140px;
+                height: 140px;
+                border-radius: 50%;
+                object-fit: cover;
+              "
+            />
+            <h2 class="fw-normal">Eye Gloome</h2>
             <p>
-              Some representative placeholder content for the three columns of
-              text below the carousel. This is the first column.
+              Mature grafic novel with a fantasy setting, in an classical oil
+              painting style with themes of love, vengence, mythology and
+              politics.
             </p>
             <p>
               <a class="btn btn-secondary" href="#">View details &raquo;</a>
