--- a/index.html
+++ b/index.html
@@ -419,27 +419,19 @@
           </div>
           <!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <svg
-              class="bd-placeholder-img rounded-circle"
-              width="140"
-              height="140"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect
-                width="100%"
-                height="100%"
-                fill="var(--bs-secondary-color)"
-              />
-            </svg>
-            <h2 class="fw-normal">Heading</h2>
+            <img
+              src="assets/pictures/adesivos.png"
+              style="
+                width: 140px;
+                height: 140px;
+                border-radius: 50%;
+                object-fit: cover;
+              "
+            />
+            <h2 class="fw-normal">Duds & Mo Stickers</h2>
             <p>
-              Another exciting bit of representative placeholder content. This
-              time, we've moved on to the second column.
+              We have stickers! Come and check them out! Themes vary from memes
+              internal to USP to geek and pop culture.
             </p>
             <p>
               <a class="btn btn-secondary" href="#">View details &raquo;</a>
