Games Heading added

--- a/index.html
+++ b/index.html
@@ -393,6 +393,12 @@
         style="width: 98.9vw; margin-top: -11vh"
       />
 
+      <!-- Placegolder for our 'thinking' drawing -->
+      <img
+        src="assets/pictures/bobitos.png"
+        style="margin: 0 25vw 50px 25vw; width: 50vw"
+      />
+
       <!-- Marketing messaging and featurettes; Wrap the rest of the page in another container to center all the content. -->
       <div class="container marketing">
         <!-- Three columns of text below the carousel -->
@@ -439,27 +445,20 @@
           </div>
           <!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <svg
-              class="bd-placeholder-img rounded-circle"
-              width="140"
-              height="140"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect
-                width="100%"
-                height="100%"
-                fill="var(--bs-secondary-color)"
-              />
-            </svg>
-            <h2 class="fw-normal">Heading</h2>
+            <img
+              src="assets/pictures/fog.png"
+              style="
+                width: 140px;
+                height: 140px;
+                border-radius: 50%;
+                object-fit: cover;
+              "
+            />
+            <h2 class="fw-normal">Games</h2>
             <p>
-              And lastly this, the third column of representative placeholder
-              content.
+              Our game library is a passion project developed throughout the
+              years during our Computer Science graduation coure. You can check
+              them in the link below.
             </p>
             <p>
               <a class="btn btn-secondary" href="#">View details &raquo;</a>
