Gloome carousel item added

--- a/index.html
+++ b/index.html
@@ -281,31 +281,22 @@
           ></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <svg
-              class="bd-placeholder-img"
-              width="100%"
-              height="100%"
-              xmlns="http://www.w3.org/2000/svg"
-              aria-hidden="true"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <rect
-                width="100%"
-                height="100%"
-                fill="var(--bs-secondary-color)"
-              />
-            </svg>
+          <div class="carousel-item active" style="background-color: black">
+            <img
+              src="assets/pictures/gloome.png"
+              style="width: 60vw; margin: 2rem 20vw"
+            />
+
             <div class="container">
               <div class="carousel-caption text-start">
-                <h1>Example headline.</h1>
-                <p class="opacity-75">
-                  Some representative placeholder content for the first slide of
-                  the carousel.
+                <h1 style="color: white">Eye Gloome</h1>
+                <p class="opacity-75" style="color: white">
+                  Our greatest adventure so far
                 </p>
                 <p>
-                  <a class="btn btn-lg btn-primary" href="#">Sign up today</a>
+                  <a class="btn btn-lg btn-primary" href="gloome.html"
+                    >Go to page</a
+                  >
                 </p>
               </div>
             </div>
@@ -420,7 +411,9 @@
               politics.
             </p>
             <p>
-              <a class="btn btn-secondary" href="#">View details &raquo;</a>
+              <a class="btn btn-secondary" href="gloome.html"
+                >View details &raquo;</a
+              >
             </p>
           </div>
           <!-- /.col-lg-4 -->
@@ -440,7 +433,9 @@
               internal to USP to geek and pop culture.
             </p>
             <p>
-              <a class="btn btn-secondary" href="#">View details &raquo;</a>
+              <a class="btn btn-secondary" href="stickers.html"
+                >View details &raquo;</a
+              >
             </p>
           </div>
           <!-- /.col-lg-4 -->
@@ -461,7 +456,9 @@
               them in the link below.
             </p>
             <p>
-              <a class="btn btn-secondary" href="#">View details &raquo;</a>
+              <a class="btn btn-secondary" href="games.html"
+                >View details &raquo;</a
+              >
             </p>
           </div>
           <!-- /.col-lg-4 -->
