--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
       .bd-mode-toggle .dropdown-menu .active .bi {
         display: block !important;
       }
+
+      .hover_gray:hover {
+        background-color: gray;
+      }
     </style>
 
     <!-- Custom styles for this template -->
@@ -259,6 +263,7 @@
       <!-- Carousel -->
       <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
         <div class="carousel-indicators">
+          <!-- Carousel Navegation buttons -->
           <button
             type="button"
             data-bs-target="#myCarousel"
@@ -280,7 +285,9 @@
             aria-label="Slide 3"
           ></button>
         </div>
+        <!-- Carousel itens -->
         <div class="carousel-inner">
+          <!-- Carousel item: Gloome -->
           <div class="carousel-item active" style="background-color: black">
             <img
               src="assets/pictures/gloome.png"
@@ -301,65 +308,50 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item">
-            <svg
-              class="bd-placeholder-img"
-              width="100%"
-              height="100%"
-              xmlns="http://www.w3.org/2000/svg"
-              aria-hidden="true"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <rect
-                width="100%"
-                height="100%"
-                fill="var(--bs-secondary-color)"
-              />
-            </svg>
+          <!-- Carousel item: Stickers -->
+          <div class="carousel-item" style="background-color: wheat">
+            <img
+              src="assets/pictures/adesivos.png"
+              style="width: 60vw; margin: 2rem 20vw"
+            />
+
             <div class="container">
-              <div class="carousel-caption">
-                <h1>Another example headline.</h1>
+              <div class="carousel-caption text-start">
+                <h1 style="color: red">Stickers</h1>
+                <p class="opacity-75" style="color: red">Come and get one</p>
                 <p>
-                  Some representative placeholder content for the second slide
-                  of the carousel.
+                  <a class="btn btn-lg btn-primary" href="stickers.html"
+                    >Go to page</a
+                  >
                 </p>
-                <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
               </div>
             </div>
           </div>
-          <div class="carousel-item">
-            <svg
-              class="bd-placeholder-img"
-              width="100%"
-              height="100%"
-              xmlns="http://www.w3.org/2000/svg"
-              aria-hidden="true"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <rect
-                width="100%"
-                height="100%"
-                fill="var(--bs-secondary-color)"
-              />
-            </svg>
+          <!-- Carousel item: Games -->
+          <div class="carousel-item" style="background-color: black">
+            <img
+              src="assets/pictures/fog.png"
+              style="width: 60vw; margin: 2rem 20vw"
+            />
+
             <div class="container">
-              <div class="carousel-caption text-end">
-                <h1>One more for good measure.</h1>
-                <p>
-                  Some representative placeholder content for the third slide of
-                  this carousel.
+              <div class="carousel-caption text-start">
+                <h1 style="color: red">Games</h1>
+                <p class="opacity-75" style="color: red">
+                  Mystery, action, comedy, we got it all
                 </p>
                 <p>
-                  <a class="btn btn-lg btn-primary" href="#">Browse gallery</a>
+                  <a class="btn btn-lg btn-primary" href="games.html"
+                    >Go to page</a
+                  >
                 </p>
               </div>
             </div>
           </div>
         </div>
+        <!-- Carousel back button -->
         <button
-          class="carousel-control-prev"
+          class="carousel-control-prev hover_gray"
           type="button"
           data-bs-target="#myCarousel"
           data-bs-slide="prev"
@@ -367,8 +359,10 @@
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
+
+        <!-- Carousel next button -->
         <button
-          class="carousel-control-next"
+          class="carousel-control-next hover_gray"
           type="button"
           data-bs-target="#myCarousel"
           data-bs-slide="next"
