social media images

--- a/index.html
+++ b/index.html
@@ -387,12 +387,13 @@
       <!-- Social media -->
       <div class="row social">
         <a href="https://www.instagram.com/duds_mo?igsh=MTk2ejBsMHM4ODhzdg=="
-          ><img src="assets/pictures/duds_mo.png"
+          ><img src="assets/pictures/insta.png"
         /></a>
-        <a href=""><img src="assets/pictures/duds_mo.png" /></a>
+        <a href=""><img src="assets/pictures/x.png" /></a>
         <a href="https://www.youtube.com/channel/UCGYyPDQwVu0wZw6ApNvMPrw"
-          ><img src="assets/pictures/duds_mo.png"
+          ><img src="assets/pictures/yt.png"
         /></a>
+        <a href=""><img src="assets/pictures/tiktok.png" /></a>
       </div>
 
       <!-- Section sent to article_exemple.html for now -->
@@ -420,7 +421,7 @@
       }
 
       // Change image every 5 seconds (5000 milliseconds)
-      setInterval(changeImage, 5000);
+      setInterval(changeImage, 3000);
     </script>
   </body>
 </html>
