--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
     <!-- Header -->
     <header data-bs-theme="dark">
       <nav class="navbar navbar-expand-md fixed-top duds_mo_bgc">
-        <img id="logo" src="./assets/pictures/duds_mo.png" />
         <div class="container-fluid">
+          <img id="logo" src="./assets/pictures/duds_mo.png" />
           <a class="navbar-brand" href="#">Duds & Mo Productions</a>
           <button
             class="navbar-toggler"
@@ -228,23 +228,15 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="gloome.html">Nossa Graphic Novel</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                <a class="nav-link" href="games.html">Nossos Jogos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="stickers.html">Loja</a>
               </li>
             </ul>
-            <form class="d-flex" role="search">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-outline-success" type="submit">
-                Search
-              </button>
-            </form>
           </div>
         </div>
       </nav>
