navbar font adjustment

--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
 
     <!-- Duds & Mo Style-->
     <link href="styles.css" rel="stylesheet" />
+
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -210,7 +218,7 @@
       <nav class="navbar navbar-expand-md fixed-top duds_mo_bgc">
         <div class="container-fluid">
           <img id="logo" src="./assets/pictures/duds_mo.png" />
-          <a class="navbar-brand" href="#">Duds & Mo Productions</a>
+          <a class="navbar-brand large_font" href="#">Duds & Mo Productions</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -223,7 +231,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0 mid_font">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
