--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 
     <link
       rel="canonical"
+      target="_blank"
       href="https://getbootstrap.com/docs/5.3/examples/carousel/"
     />
 
     <link
       rel="stylesheet"
+      target="_blank"
       href="https://cdn.jsdelivr.net/npm/@docsearch/css@3"
     />
 
@@ -236,13 +238,19 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="gloome.html">Nossa Graphic Novel</a>
+                <a class="nav-link" target="_blank" href="gloome.html"
+                  >Nossa Graphic Novel</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="games.html">Nossos Jogos</a>
+                <a class="nav-link" target="_blank" href="games.html"
+                  >Nossos Jogos</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="stickers.html">Loja</a>
+                <a class="nav-link" target="_blank" href="stickers.html"
+                  >Loja</a
+                >
               </li>
             </ul>
           </div>
@@ -257,7 +265,7 @@
         class="carousel slide mb-6 custom_size"
         data-bs-ride="carousel"
       >
-        <div class="carousel-indicators">
+        <div class="carousel-indicators" style="top: 50px">
           <!-- Carousel Navegation buttons -->
           <button
             type="button"
@@ -296,7 +304,10 @@
                   Our greatest adventure so far
                 </p>
                 <p>
-                  <a class="btn btn-lg btn-primary" href="gloome.html"
+                  <a
+                    class="btn btn-lg btn-primary"
+                    target="_blank"
+                    href="gloome.html"
                     >Go to page</a
                   >
                 </p>
@@ -310,7 +321,10 @@
                 <h1 style="color: red">Stickers</h1>
                 <p class="opacity-75" style="color: red">Come and get one</p>
                 <p>
-                  <a class="btn btn-lg btn-primary" href="stickers.html"
+                  <a
+                    class="btn btn-lg btn-primary"
+                    target="_blank"
+                    href="stickers.html"
                     >Go to page</a
                   >
                 </p>
@@ -326,7 +340,10 @@
                   Mystery, action, comedy, we got it all
                 </p>
                 <p>
-                  <a class="btn btn-lg btn-primary" href="games.html"
+                  <a
+                    class="btn btn-lg btn-primary"
+                    target="_blank"
+                    href="games.html"
                     >Go to page</a
                   >
                 </p>
@@ -373,24 +390,31 @@
 
       <!-- Social media -->
       <div class="row social">
-        <a href="https://www.instagram.com/duds_mo?igsh=MTk2ejBsMHM4ODhzdg=="
+        <a
+          target="_blank"
+          href="https://www.instagram.com/duds_mo?igsh=MTk2ejBsMHM4ODhzdg=="
           ><img src="assets/pictures/insta.png"
         /></a>
-        <a href=""><img src="assets/pictures/x.png" /></a>
-        <a href="https://www.youtube.com/channel/UCGYyPDQwVu0wZw6ApNvMPrw"
+        <a target="_blank" href="https://x.com/duds_mo_art"
+          ><img src="assets/pictures/x.png"
+        /></a>
+        <a
+          target="_blank"
+          href="https://www.youtube.com/channel/UCGYyPDQwVu0wZw6ApNvMPrw"
           ><img src="assets/pictures/yt.png"
         /></a>
-        <a href=""><img src="assets/pictures/tiktok.png" /></a>
+        <a target="_blank" href=""><img src="assets/pictures/tiktok.png" /></a>
       </div>
 
       <!-- Section sent to article_exemple.html for now -->
 
       <!-- Footer -->
       <footer class="container">
-        <p class="float-end"><a href="#">Back to top</a></p>
+        <p class="float-end"><a target="_blank" href="#">Back to top</a></p>
         <p>
           &copy; 2017–2024 Company, Inc. &middot;
-          <a href="#">Privacy</a> &middot; <a href="#">Terms</a>
+          <a target="_blank" href="#">Privacy</a> &middot;
+          <a target="_blank" href="#">Terms</a>
         </p>
       </footer>
     </main>
