back buttons on other pages

--- a/gloome.html
+++ b/gloome.html
@@ -10,6 +10,7 @@
         background-color: #000000; /* Fundo preto */
         color: #ffd700; /* Cor do título em dourado */
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         height: 100vh;
@@ -24,5 +25,7 @@
   </head>
   <body>
     <h1 class="title">Eye Gloome</h1>
+    <h2 class="title">We are still working on this one...</h1>
+    <a href="index.html">Back Home</a>
   </body>
 </html>
