--- a/index.html
+++ b/index.html
@@ -238,19 +238,13 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" target="_blank" href="gloome.html"
-                  >Nossa Graphic Novel</a
-                >
+                <a class="nav-link" href="gloome.html">Nossa Graphic Novel</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" target="_blank" href="games.html"
-                  >Nossos Jogos</a
-                >
+                <a class="nav-link" href="games.html">Nossos Jogos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" target="_blank" href="stickers.html"
-                  >Loja</a
-                >
+                <a class="nav-link" href="stickers.html">Loja</a>
               </li>
             </ul>
           </div>
@@ -304,10 +298,7 @@
                   Our greatest adventure so far
                 </p>
                 <p>
-                  <a
-                    class="btn btn-lg btn-primary"
-                    target="_blank"
-                    href="gloome.html"
+                  <a class="btn btn-lg btn-primary" href="gloome.html"
                     >Go to page</a
                   >
                 </p>
@@ -315,16 +306,16 @@
             </div>
           </div>
           <!-- Carousel item: Stickers -->
-          <div class="carousel-item" style="background-color: wheat">
+          <div class="carousel-item">
             <div class="container">
               <div class="carousel-caption text-start">
-                <h1 style="color: red">Stickers</h1>
-                <p class="opacity-75" style="color: red">Come and get one</p>
+                <h1>Stickers</h1>
+                <p class="opacity-75">Come and get one</p>
                 <p>
                   <a
                     class="btn btn-lg btn-primary"
-                    target="_blank"
                     href="stickers.html"
+                    style="z-index: 50"
                     >Go to page</a
                   >
                 </p>
@@ -332,18 +323,13 @@
             </div>
           </div>
           <!-- Carousel item: Games -->
-          <div class="carousel-item" style="background-color: black">
+          <div class="carousel-item">
             <div class="container">
               <div class="carousel-caption text-start">
-                <h1 style="color: red">Games</h1>
-                <p class="opacity-75" style="color: red">
-                  Mystery, action, comedy, we got it all
-                </p>
+                <h1>Games</h1>
+                <p class="opacity-75">Mystery, action, comedy, we got it all</p>
                 <p>
-                  <a
-                    class="btn btn-lg btn-primary"
-                    target="_blank"
-                    href="games.html"
+                  <a class="btn btn-lg btn-primary" href="games.html"
                     >Go to page</a
                   >
                 </p>
@@ -404,17 +390,20 @@
           ><img src="assets/pictures/yt.png"
         /></a>
         <a target="_blank" href=""><img src="assets/pictures/tiktok.png" /></a>
+        <a target="_blank" href="https://t.me/+4jie6M1Y1egwNmEx"
+          ><img src="assets/pictures/telegram.png"
+        /></a>
       </div>
 
       <!-- Section sent to article_exemple.html for now -->
 
       <!-- Footer -->
       <footer class="container">
-        <p class="float-end"><a target="_blank" href="#">Back to top</a></p>
+        <p class="float-end"><a href="#">Back to top</a></p>
         <p>
           &copy; 2017–2024 Company, Inc. &middot;
-          <a target="_blank" href="#">Privacy</a> &middot;
-          <a target="_blank" href="#">Terms</a>
+          <a href="#">Privacy</a> &middot;
+          <a href="#">Terms</a>
         </p>
       </footer>
     </main>
