--- a/stickers.html
+++ b/stickers.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="styles.css" />
     <style>
       body {
-        background-color: #ffb6c1; /* Fundo rosa claro */
+        background-color: #ffffff; /* Fundo rosa claro */
         color: #0000ff; /* Cor do título em azul */
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         height: 100vh;
@@ -23,6 +24,8 @@
     </style>
   </head>
   <body>
-    <h1 class="title">Stickers</h1>
+    <h1 class="title">Stickers</h1><br>
+    <h2 class="title">We are still working on this one...</h1>
+    <a href="index.html">Back Home</a>
   </body>
 </html>
