stickers ccarousel item updated

--- a/index.html
+++ b/index.html
@@ -306,7 +306,11 @@
             </div>
           </div>
           <!-- Carousel item: Stickers -->
-          <div class="carousel-item">
+          <div class="carousel-item" style="background-color: #ff7a01">
+            <img
+              src="assets/pictures/banner_stickers.png"
+              style="width: 900px; margin: 50px calc((100vw - 900px) / 2)"
+            />
             <div class="container">
               <div class="carousel-caption text-start">
                 <h1>Stickers</h1>
