--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 
       <!-- Section sent to article_exemple.html for now -->
 
+      <div style="display: flex; justify-content: center; align-itens:center; width:100vw; height: 400px;"> Agradecemos a visita ;) </div>
       <!-- Footer -->
       <footer class="container">
         <p class="float-end"><a href="#">Back to top</a></p>
