--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   </head>
 
   <body>
-    <!-- Theme symbols -->
+    <!-- Theme symbols 
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
       <symbol id="check2" viewBox="0 0 16 16">
         <path
@@ -141,21 +141,21 @@
           d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"
         />
       </symbol>
-    </svg>
+    </svg> -->
 
 
 
     <!-- Header -->
     <header data-bs-theme="dark">
-      <nav class="navbar navbar-expand-md fixed-top duds_mo_bgc">
-        <div class="container-fluid">
+      <nav class="navbar navbar-expand-md fixed-top duds_mo_bgc" style:"border-bottom: 4px solid black; height: 20vh;">
+        <div class="container-fluid">/
           <img id="logo" src="./assets/pictures/duds_mo.png" />
           <a class="navbar-brand large_font" href="#">Duds & Mo Productions</a>
         </div>
       </nav>
     </header>
 
-    <main class="duds_mo_bgc">
+    <main class="duds_mo_bgc" style="height: 70vh; display: flex; flex-direction: column; justify-content: space-around;">
       <!-- Social media -->
       <div class="row social">
         <a
@@ -179,9 +179,9 @@
 
       <!-- Section sent to article_exemple.html for now -->
 
-      <div style="display: flex; justify-content: center; align-itens:center; width:100vw; height: 400px;"> Agradecemos a visita ;) </div>
+      <div style="display: flex; justify-content: center; align-itens:center;"> Agradecemos a visita ;) </div>
       <!-- Footer -->
-      <footer class="container">
+      <footer class="container" style="background-color: #006CFF; border-top: 4px solid black; height: 10vh;">
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>
           &copy; 2017–2024 Company, Inc. &middot;
