--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <!-- Header -->
     <header data-bs-theme="dark">
       <nav class="navbar navbar-expand-md fixed-top duds_mo_bgc" style:"border-bottom: 4px solid black; height: 20vh;">
-        <div class="container-fluid">/
+        <div class="container-fluid">
           <img id="logo" src="./assets/pictures/duds_mo.png" />
           <a class="navbar-brand large_font" href="#">Duds & Mo Productions</a>
         </div>
@@ -180,7 +180,8 @@
       <!-- Section sent to article_exemple.html for now -->
 
       <div style="display: flex; justify-content: center; align-itens:center;"> Agradecemos a visita ;) </div>
-      <!-- Footer -->
+    </main>
+          <!-- Footer -->
       <footer class="container" style="background-color: #006CFF; border-top: 4px solid black; height: 10vh;">
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>
@@ -189,7 +190,6 @@
           <a href="#">Terms</a>
         </p>
       </footer>
-    </main>
     <script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
