--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     <!-- Header -->
     <header data-bs-theme="dark">
-      <nav class="navbar navbar-expand-md fixed-top duds_mo_bgc" style:"border-bottom: 4px solid black; height: 20vh;">
+      <nav class="navbar navbar-expand-md fixed-top duds_mo_bgc" style="border-bottom: 4px solid black; height: 20vh;">
         <div class="container-fluid">
           <img id="logo" src="./assets/pictures/duds_mo.png" />
           <a class="navbar-brand large_font" href="#">Duds & Mo Productions</a>
