--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <div style="display: flex; justify-content: center; align-itens:center;"> Agradecemos a visita ;) </div>
     </main>
           <!-- Footer -->
-      <footer class="container" style="background-color: #006CFF; border-top: 4px solid black; height: 10vh;">
+      <footer class="container" style="background-color: #006CFF; border-top: 4px solid black; height: 10vh; width: auto;">
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>
           &copy; 2017–2024 Company, Inc. &middot;
